fixed double scroll

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 html {
   height: 100%;
   font-family: sans-serif;
-  overflow-x: scroll;
-  overflow-y: scroll;
+
 }
 
 body {
@@ -11,7 +10,7 @@ body {
   justify-content: center;
   height: 100vh;
   margin: 0;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 
